fix spacing between wave and audio controls

--- a/frontend/src/components/audio/AudioPlayer.css
+++ b/frontend/src/components/audio/AudioPlayer.css
@@ -13,6 +13,10 @@
   border: solid 2px rgb(221, 159, 87);
 }
 
+::part(wrapper) {
+  margin-bottom: 10px;
+}
+
 .waveform-container {
   max-width: 600px;
   min-height: 90px;
